--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div>
   <form id="loginForm">
     <img src="./Assets/Images/logo-OpazD70S.png" class="navbar-brand" alt="logo-image" style="width: 9vw;margin: auto;">
-                                     <h6 style="text-align: center;font-size: 12px;">LOGIN</h6>
+                                     <h6 style="text-align: center;font-size: 22px;margin-top: 5px;">LOGIN</h6>
                                               <div class="but_divv">
                                                 <button id="nm" ><a href="index.html" style="text-decoration: none;color: black;" onclick="loged()">LOGIN</a></button>
                                                 <button id="mk" ><a href="register.html" style="text-decoration: none;color: black;" onclick="reg()">REGISTER</a></button>
