--- a/register.html
+++ b/register.html
@@ -40,7 +40,7 @@
                                         <div>
                                           <form id="registerform">
                                      <img src="./Assets/Images/logo-OpazD70S.png" class="navbar-brand" alt="logo-image" style="width: 9vw;margin: auto;">
-                                     <h6 style="text-align: center;font-size: 12px;">REGISTER</h6>
+                                     <h6 style="text-align: center;font-size: 22px;margin-top: 5px;">REGISTER</h6>
                                               <div class="but_divv">
                                                 <button id="nm" ><a href="index.html" style="text-decoration: none;color: black;" onclick="loged()">LOGIN</a></button>
                                                 <button id="mk" ><a href="register.html" style="text-decoration: none;color: black;" onclick="reg()">REGISTER</a></button>
