--- a/result.html
+++ b/result.html
@@ -25,33 +25,23 @@
         </div>
 
 
-<h2 style="margin-left: 5%;">Percentage:</h2>
-
+<!-- <h2 style="margin-left: 5%;">Percentage:</h2> -->
 <div class="skill">
     <div class="outer">
         <div class="inner">
-            <div id="number">
-                <h3 class="number">77</h3>
-            </div>
+            <svg viewBox="0 0 100 100">
+                <defs>
+                    <linearGradient id="GradientColor">
+                        <stop offset="0%" stop-color="#ff0000" />
+                        <stop offset="100%" stop-color="#0000ff" />
+                    </linearGradient>
+                </defs>
+                <circle cx="50" cy="50" r="35"></circle>
+            </svg>
+            <div id="number"></div>
         </div>
     </div>
-
-
-    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
-        <defs>
-           <linearGradient id="GradientColor">
-              <stop offset="0%" stop-color="#e91e63" />
-              <stop offset="100%" stop-color="#673ab7" />
-           </linearGradient>
-        </defs>
-        <circle cx="80" cy="80" r="70" stroke-linecap="round" />
-</svg>
-
-
-
-
 </div>
-
 
 
 
@@ -74,7 +64,7 @@
         </div>
         <!-- User total marks,obtained marks and passing marks section in  report card-->
     <div class="total">
-        <h3 class="conditionseven" style="background: gainsboro;border: 1px solid white;color: black;padding: 1%;">Passing Marks: <b>50</b></h3>
+        <h3 class="conditionseven" style="background: gainsboro;color: blue;padding: 1%;font-weight: bolder;">Passing Marks: <b>50</b></h3>
         <h3 class="result">Obtained Marks: 0</h3>
         <h3 class="result-total">Total Marks: <b><span>100</span></b></h3>
     </div>
